kubernetes/apps/networking/external-services/app/truenas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  annotations:
    # external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:truenas"
    hajimari.io/appName: TrueNas
    hajimari.io/info: Network Attached Storage
    hajimari.io/group: Infrastructure
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nas
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.1.104
      # - ip: ${NAS_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
